--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,15 +19,24 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
-            android:name="com.example.elephant.ElephantPhotoListActivity"
+            android:name="com.example.elephant.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        
+        <activity
+            android:name="com.example.elephant.ElephantPhotoListActivity"
+            android:label="@string/app_name" >
+            
+        </activity>
+        
         <activity android:name=".NewElephantPhotoActivity"
           android:label="@string/app_name"
           android:screenOrientation="portrait">
