--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -33,18 +33,18 @@
         </activity>
         
         <activity
-            android:name="com.example.elephant.ElephantPhotoListActivity"
+            android:name="com.example.elephant.PhotoListActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >   
         </activity>
         
-        <activity android:name="com.example.elephant.NewElephantPhotoActivity"
+        <activity android:name="com.example.elephant.NewPhotoActivity"
           android:label="@string/app_name"
           android:screenOrientation="portrait">
 		</activity>
 		
          <activity
-            android:name="com.example.elephant.ElephantPhotoDetailActivity"
+            android:name="com.example.elephant.PhotoDetailActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >   
         </activity>
