--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.elephant"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" > 
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -16,13 +16,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/application_icon"
         android:label="@string/app_name"
-        android:theme="@style/android:Theme.Holo.Light" >
+        android:theme="@style/Elephant" >
         
         <activity
             android:name="com.example.elephant.LoginActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/Elephant"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
