--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shumengye.elephant"
-    android:versionCode="2"
-    android:versionName="1.1" > 
+    android:versionCode="3"
+    android:versionName="1.2" > 
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -13,6 +13,8 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-feature android:name="android.hardware.camera" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	
+	<supports-screens android:smallScreens="false" />
 
     <application
         android:allowBackup="true"
